--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,13 +18,23 @@ android {
         }
     }
 }
+allprojects {
+    repositories {
+        jcenter()
+        flatDir{
+            dirs 'libs'
+        }
+    }
+}
+dependencies {
+    compile(name:'virtualjoystick-debug', ext:'aar')
+}
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:25.0.0'
-    compile 'io.github.controlwear:virtualjoystick:0.9.9'
     testCompile 'junit:junit:4.12'
 }
